# NetworkingAdvancedApplications

./: README.md
assignment-mongodb/: Dockerfile  README.md  docker-compose.yml  exercise2_script.sh  main.py  pyproject.toml  scenario2_case1.py  scenario2_case2.py  scenario3.py
assignment-nginx/assignment3_files/: docker-compose.yml  exercise3_script.sh  nginx.conf
assignment-nginx/assignment3_files/data/case-1A/: ip_hash.txt  least_conn.txt  round-robin.txt
assignment-nginx/assignment3_files/data/case-1A-nokeep/: ip_hash.txt  least_conn.txt  round_robin.txt
assignment-nginx/assignment3_files/data/case-1B/: ip_hash.txt  least_conn.txt  round_robin.txt
assignment-nginx/assignment3_files/k6_scripts/: scenario1_do.js  scenario1_health.js  scenario2_health_1.js  scenario2_health_2.js  scenario3_health.js
assignment-nginx/assignment3_files/src/: Dockerfile  backend.py
assignment-pub-sub/: README.md  pyproject.toml
assignment-pub-sub/consumer/: consumer.py
assignment-pub-sub/producer/: producer.py
